--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -9,17 +9,14 @@
   background-size: cover;
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
-  border-left: 8px solid #4f6b7e;
-  border-right: 8px solid #4f6b7e;
-  border-top: 4px solid #3c5262;
-  border-bottom: 4px solid #3c5262;
+  border: 2px solid rgb(0, 237, 250, 0.3);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .movable_box {
   display: flex;
   width: 500px;
-  height: 320px;
+  height: auto;
   background-color: rgba(0, 0, 0, 0.8);
   transition: 500ms;
   border-right: 1px solid rgb(61, 76, 97, 0.5);
@@ -27,53 +24,15 @@
 
 .content_wrapper {
   width: 415px;
-  height: 300px;
+  padding: 0 20px 0 30px;
+  height: auto;
   color: white;
   font-size: 14px;
-  /* background-color: rgba(255, 255, 255, 0.1);*/
-  padding: 10px 20px 10px 20px;
   cursor: pointer;
 }
 
 .content_wrapper:hover {
   background-color: rgba(255, 255, 255, 0.15);
-}
-
-.vertical_text {
-  width: 20px;
-  margin: 20px auto 20px auto;
-  writing-mode: vertical-lr;
-  text-orientation: upright;
-  color: white !important;
-}
-
-.tab {
-  text-align: center;
-  width: 75px;
-  height: 310px;
-  transition: 500ms;
-  animation-name: waver;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  color: white;
-}
-
-.tab>* {
-  cursor: pointer;
-}
-
-@keyframes waver {
-  0% {
-    opacity: 0.3;
-  }
-
-  50% {
-    opacity: 0.8;
-  }
-
-  100% {
-    opacity: 0.3;
-  }
 }
 
 .title {
