--- a/src/global/components/navbar/navbar.module.css
+++ b/src/global/components/navbar/navbar.module.css
@@ -7,7 +7,7 @@
   background-color: rgba(20, 20, 20, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: var(--border-radius-one);
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  box-shadow: var(--box-shadow-one);
 }
 
 .wrapper {
