--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -2,15 +2,15 @@
   margin: 0 auto;
   display: flex;
   justify-content: flex-end;
-  max-width: 880px;
   height: var(--header-height);
+  max-width: var(--header-max-width);
   background-image: url('../../../global/assets/images/cyberpunk_2.gif');
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
-  border: 2px solid rgb(0, 237, 250, 0.3);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: var(--header-border);
+  box-shadow: var(--box-shadow-two);
 }
 
 .movable_box {
