--- a/src/global/components/navbar/navbar.module.css
+++ b/src/global/components/navbar/navbar.module.css
@@ -5,9 +5,9 @@
   height: 75px;
   transition: 500ms;
   background-color: rgba(20, 20, 20, 0.6);
-  border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: var(--border-radius-one);
   box-shadow: var(--box-shadow-one);
+  /*border: 1px solid rgba(255, 255, 255, 0.15);*/
 }
 
 .wrapper {
@@ -54,7 +54,7 @@
 .selected {
   opacity: 1;
   background-color: rgba(255, 255, 255, 0.07);
-  color: #00edfa !important;
+  color: var(--bright-slate) !important;
 }
 
 .left_box {
