--- a/src/pages/stats/components/header.module.css
+++ b/src/pages/stats/components/header.module.css
@@ -36,13 +36,20 @@
   width: 60px;
   text-align: center;
   color: white;
-  opacity: 0.7;
+  opacity: 0.4;
   padding: 5px 15px 5px 15px;
   margin: 10px;
   cursor: pointer;
+  transition: 500ms;
 }
 
 .selected {
-  border-radius: 3px;
-  border: 1px solid rgb(70, 201, 70);
+  border-radius: 99999px;
+  border: 2px dotted var(--bright-slate);
+  opacity: 0.8 !important;
+}
+
+.transparent_border {
+  border-radius: 99999px;
+  border: 2px dotted transparent;
 }
