--- a/src/pages/writings/components/articlesList.module.css
+++ b/src/pages/writings/components/articlesList.module.css
@@ -1,11 +1,21 @@
+#list {
+  margin: 0 auto;
+  padding: var(--content-padding);
+  max-width: var(--content-max-width);
+  color: var(--white);
+  border-radius: var(--content-border-radius);
+  border: var(--content-border);
+  background-color: var(--content-bg-color);
+  box-shadow: var(--content-shadow);
+}
+
 .card {
   flex: 1;
-  margin-top: 40px;
+  margin: 40px 20px 40px 20px;
   padding: 40px;
   border-radius: 5px;
   transition: 200ms;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  background-color: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
