background now has texture

--- a/src/pages/stats/components/header.module.css
+++ b/src/pages/stats/components/header.module.css
@@ -1,7 +1,13 @@
 #header {
   margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  max-width: var(--header-max-width);
+  border-radius: var(--border-radius-one);
+}
+
+.wrapper {
+  position: relative;
+  z-index: 0;
   height: var(--header-height);
   max-width: var(--header-max-width);
   background-image: url('../../../global/assets/images/cyberpunk_7.gif');
@@ -9,8 +15,29 @@
   background-size: cover;
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
-  border: var(--header-border);
-  box-shadow: var(--box-shadow-one);
+  border-top: 1px solid rgba(255, 255, 255, 0.30);
+  box-shadow: inset -4px 4px 12px rgb(0, 0, 0, 1);
+}
+
+.glass {
+  display: flex;
+  justify-content: flex-end;
+  border-right: 1px solid white;
+  overflow-x: hidden;
+  border-image:
+    linear-gradient(to bottom,
+      rgb(255, 255, 255, 0.15),
+      rgba(0, 0, 0, 0.9)) 1 100%;
+  position: relative;
+  z-index: 1;
+  position: relative;
+  background:
+    linear-gradient(8deg,
+      rgba(255, 255, 255, 0.0) 20%,
+      rgba(255, 255, 255, 0.05) 50%,
+      rgba(255, 255, 255, 0.18) 80%);
+  width: calc(100%-1px);
+  height: 100%;
 }
 
 .movable_box {
