--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -5,7 +5,7 @@
 :root {
   /* margins */
   --app-container-margin: 0 auto;
-  --top-section-margin: 20px 0 0 0;
+  --top-section-margin: 25px 0 0 0;
   --page-section-margin: 30px 0 0 0;
   --section-title-margin: 50px auto 15px auto;
 
@@ -78,6 +78,7 @@ body {
 }
 
 .app-container {
+  min-height: 100vh;
   border-top: 1px solid transparent;
   border-left: 1px solid rgba(0, 0, 0, 0.4);
   border-right: 1px solid rgba(0, 0, 0, 0.4);
@@ -112,7 +113,6 @@ code {
 /* 
 -- classes and animations used for Headers -- 
 */
-
 .tab {
   text-align: center;
   width: 63px;
