filtering in the home page is now working

--- a/src/pages/home/components/filterByEvent.module.css
+++ b/src/pages/home/components/filterByEvent.module.css
@@ -26,3 +26,12 @@
 #filterByEvent>div:hover {
   background-color: rgb(130, 47, 255, 0.7);
 }
+
+.icon {
+  margin: 0px 20px 0px 0px;
+  font-size: 22px;
+}
+
+.selected {
+  background-color: rgb(130, 47, 255, 0.7) !important;
+}
