--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -9,6 +9,11 @@
   --content-section-margin: 30px 0 0 0;
   --bottom-section-margin: 80px 0 50px 0;
 
+  /* global styles */
+  --box-shadow-one: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  --box-shadow-two: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  --selected-font-color: var(--bright-slate);
+
   /* layouts margins */
   --section-title-margin: 50px auto 15px auto;
 
@@ -22,6 +27,8 @@
   --white-transparent-one: rgba(255, 255, 255, 0.1);
   --white-transparent-two: rgba(255, 255, 255, 0.1);
   --white: #f0f7ff;
+  --pink: #df24be;
+  --pink-transparent: rgba(223, 36, 190, 0.7);
 
   /* header styles */
   --header-max-width: 876px;
@@ -29,21 +36,19 @@
   --header-border: 0px solid rgb(0, 237, 250, 0.3);
   --border-radius-one: 5px;
 
-  /* default wrapper styles (navbar, content, footer, ...) */
+  /* wrapper styles (navbar, content, footer, ...) */
   --wrapper-bg-color: var(--dark-transparent-two);
   --wrapper-border-radius: var(--border-radius-two);
   --wrapper-border: 1px solid rgba(0, 0, 0, 0.3);
   --wrapper-inner-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px 1px inset;
 
+
   /* navbar */
+  --selected-bg-color: rgba(255, 255, 255, 0.07);
   --border-radius-two: 3px;
 
-  /* global styles */
-  --box-shadow-one: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  --box-shadow-two: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
   /* content wrapper styles */
-  --content-padding: 20px 0 0 0;
+  --content-padding: 20px 0 50px 0;
   --content-max-width: 878px;
 
   /* animation related */
