--- a/src/pages/home/components/latest/latest.module.css
+++ b/src/pages/home/components/latest/latest.module.css
@@ -1,14 +1,17 @@
 .event_wrapper {
-  margin: 0 auto;
+  margin: 20px auto;
   display: flex;
   width: 80%;
-  border: 1px solid var(--white-transparent-two);
+  color: rgba(255, 255, 255, 0.7);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   cursor: pointer;
+  transition: 100ms;
 }
 
 .event_wrapper:hover {
+  color: rgba(255, 255, 255, 1);
   background-color: var(--white-transparent-one);
 }
 
@@ -17,6 +20,7 @@
   justify-content: center;
   align-items: center;
   font-size: 30px;
+  color: var(--bright-slate);
   min-width: 70px;
 }
 
