--- a/src/global/layouts/sectionTitle.module.css
+++ b/src/global/layouts/sectionTitle.module.css
@@ -2,16 +2,13 @@
   margin: var(--section-title-margin);
   max-width: 888px;
   width: 95%;
-  /*border: 1px solid white;*/
 }
 
 .wrapper {
   display: flex;
   width: 75%;
   min-width: 450px;
-  margin: 0 0 0 0px;
-  /*border-bottom: 1px solid rgb(0, 237, 250, 0.7);*/
-  /*border-bottom: 2px solid rgba(255, 255, 255, 0.2);*/
+  margin: 0 0 0 0;
 }
 
 .text_style_one {
