--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 :root {
   /* app margins */
-  --app-container-margin: 0 auto;
+  --app-container-margin: 40px auto;
   --top-section-margin: 25px 0 0 0;
   --content-section-margin: 30px 0 0 0;
   --bottom-section-margin: 80px 0 50px 0;
@@ -69,6 +70,7 @@ body {
 
 .app-container {
   min-height: 100vh;
+  border-radius: 3px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   border-left: 1px solid rgba(0, 0, 0, 0.4);
@@ -78,7 +80,7 @@ body {
   background-image: repeating-linear-gradient(-45deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.08) 1px, transparent 1px, transparent 6px);
   background-size: 3px 3px;
   height: auto;
-  background-color: rgb(39, 66, 100);
+  background-color: rgba(39, 66, 100, 0.75);
 }
 
 #top {
