social box mechanism is now working

--- a/src/global/components/display/display.module.css
+++ b/src/global/components/display/display.module.css
@@ -21,35 +21,38 @@
   position: relative;
   width: 800px;
   height: 50px;
+  overflow: hidden;
   /*border: 1px solid white;*/
 }
 
 .social {
   display: flex;
   position: absolute;
-  top: 2px;
-  right: 2px;
+  top: 3px;
+  right: 3px;
   z-index: 1;
   width: 270px;
-  height: 44px;
+  height: 42px;
   color: rgba(255, 255, 255, 0.3);
   border-radius: 4px 2px 2px 4px;
   border-top: 1px solid rgba(255, 255, 255, 0.32);
   border-right: 1px solid rgba(255, 255, 255, 0.07);
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   border-left: 1px solid rgba(255, 255, 255, 0.07);
-  background:
+  background-color: rgb(33, 56, 100);
+  /*background:
     linear-gradient(0deg,
       rgba(49, 116, 240, 0.12) 10%,
       rgba(49, 116, 240, 0.14) 50%,
-      rgba(49, 116, 240, 0.17) 80%);
+      rgba(49, 116, 240, 0.17) 80%);*/
+  transition: 300ms;
 }
 
 .button_box {
   cursor: pointer;
-  width: 35px;
+  width: 33px;
   margin: 1px 1px 1px 1px;
-  height: 42px;
+  height: 40px;
   border-radius: 3px 3px 3px 3px;
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -69,8 +72,8 @@
 }
 
 #arrow {
-  font-size: 30px;
-  margin: 6px 0px 0px 9px;
+  font-size: 28px;
+  margin: 7px 0px 0px 9px;
   color: rgba(255, 255, 255, 0.2);
 }
 
