--- a/src/global/components/footer/footer.module.css
+++ b/src/global/components/footer/footer.module.css
@@ -1,11 +1,23 @@
 #footer {
   display: flex;
+  font-size: 14px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   text-align: center;
   width: 880px;
-  height: 200px;
-  color: rgba(255, 255, 255, 0.6);
+  height: 50px;
+  color: rgba(255, 255, 255, 0.7);
+  /*border: 1px solid white;*/
+}
+
+span {
+  color: rgba(0, 255, 255, 0.7);
+  transition: 200ms;
+  cursor: pointer;
+}
+
+span:hover {
+  color: rgba(0, 255, 255);
 }
