--- a/src/pages/home/components/filterByEvent.module.css
+++ b/src/pages/home/components/filterByEvent.module.css
@@ -1,15 +1,16 @@
 #filterByEvent {
   display: flex;
-  margin: 20px auto 0px auto;
+  margin: 0 auto 0 auto;
   padding: 0px 0px 20px 0px;
   width: 90%;
   flex-wrap: wrap;
+  /*border: 1px solid white;*/
 }
 
 #filterByEvent>div {
   flex: 1 0 150px;
   max-width: 170px;
-  margin: 20px;
+  margin: 0px 20px 20px 20px;
   padding: 12px 0px 12px 0px;
   text-align: center;
   align-items: center;
