--- a/src/pages/projects/layouts/projectCard.module.css
+++ b/src/pages/projects/layouts/projectCard.module.css
@@ -1,74 +1,44 @@
 #project_card {
-  height: 300px;
-  max-width: 300px;
+  flex: 1;
+  height: fit-content;
   padding: 35px 30px 35px 30px;
-  flex: 50%;
   margin-top: 20px;
   border-radius: 5px;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 #project_card:hover {
-  /*box-shadow: inset 0 0 2px white;*/
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 .header {
   display: flex;
-  border: 1px solid transparent;
 }
 
 .header .left_box {
   display: flex;
-  width: 100px;
+  flex: auto;
   align-items: center;
-  /*border: 1px solid white;*/
-}
-
-.header .middle_box {
-  display: flex;
-  width: 150px;
-  color: white;
-  justify-content: flex-end;
-  align-items: center;
-  overflow-x: hidden;
-  /*border: 1px solid white;*/
-}
-
-.header .middle_box .movable_text {
-  width: 80px;
-  padding-top: 2px;
-  font-size: 14px;
-  transform: translateX(80px);
-  transition: 700ms;
-  color: rgba(255, 255, 255, 0.5);
-  cursor: pointer;
-  /*background-color: rgba(255, 255, 255, 0.2);*/
-}
-
-.header .middle_box .movable_text:hover {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-#project_card:hover .movable_text {
-  transform: translateX(15px);
+  font-size: 18px;
+  color: #eee;
+  text-transform: capitalize;
+  font-weight: 500;
 }
 
 .header .right_box {
   display: flex;
   width: 80px;
   align-items: center;
-  /*border: 1px solid white;*/
 }
 
 .header .right_box>* {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 255, 255, 0.6);
   width: 23px;
   transition: 300ms;
 }
 
 .header .right_box>*:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(0, 255, 255, 0.9);
   width: 23px;
   cursor: pointer;
 }
@@ -78,38 +48,31 @@
   color: aqua;
 }
 
-.name {
-  margin-top: 20px;
-  text-transform: capitalize;
-  color: #eee;
-  font-size: 20px;
-  font-weight: 600;
-}
-
 .about {
   text-align: left;
-  margin-top: 10px;
+  margin-top: 30px;
   color: lightblue;
-  opacity: 0.6;
-  font-size: 14px;
+  opacity: 0.7;
+  font-size: 15px;
   font-weight: 300;
 }
 
 .tags_wrapper {
   text-align: left;
   margin-top: 30px;
-  padding-bottom: 20px;
+  padding-bottom: 0px;
   margin-left: -3px;
 }
 
 .tag {
   display: inline-block;
-  font-size: 11px;
+  padding: 2px 8px 3px 8px;
+  font-size: 12px;
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.7) !important;
-  padding: 2px 6px 3px 6px;
+  color: rgba(255, 255, 255, 0.9) !important;
   background-color: rgba(255, 255, 255, 0.1);
   color: black;
   border-radius: 2px;
   margin: 3px;
+  cursor: default;
 }
