--- a/src/pages/writings/components/filterByTopics.module.css
+++ b/src/pages/writings/components/filterByTopics.module.css
@@ -1,6 +1,6 @@
 #filterByTopic {
   display: flex;
-  margin: 20px auto 0px auto;
+  margin: 0 auto 0 auto;
   padding: 0px 0px 20px 0px;
   width: 90%;
   flex-wrap: wrap;
@@ -9,7 +9,7 @@
 #filterByTopic>div {
   flex: 1 0 130px;
   max-width: 130px;
-  margin: 20px;
+  margin: 0px 20px 20px 20px;
   padding: 12px 0px 12px 0px;
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
