--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -49,7 +49,7 @@
   --border-radius-two: 3px;
 
   /* content wrapper styles */
-  --content-padding: 20px 0 50px 0;
+  --content-padding: 20px 0px 50px 0px;
   --content-max-width: 878px;
 
   /* animation related */
