--- a/src/pages/stats/components/SO/SO.module.css
+++ b/src/pages/stats/components/SO/SO.module.css
@@ -1,27 +1,15 @@
-.main {
-  width: 780px;
-  margin-top: 10px;
+#main {
+  margin: 0 30px 0 30px;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
+  /*border: 1px solid white;*/
 }
 
 .left_box {
-  width: 384px;
+  width: 50%;
+  height: 100%;
 }
 
 .right_box {
-  width: 390px;
-}
-
-.flex_box1 {
-  display: flex;
-  justify-content: flex-start;
-  margin-top: 10px;
-  font-size: 20px;
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.flex_box1>div:first-child {
-  margin-right: 50px;
+  flex: auto;
+  height: 100% !important;
 }
