--- a/src/pages/stats/components/SO/children/wins.module.css
+++ b/src/pages/stats/components/SO/children/wins.module.css
@@ -1,8 +1,8 @@
 #wins {
   font-family: 'Barlow Semi Condensed', sans-serif;
   height: 70px;
-  max-width: 330px;
-  margin: 15px 0 0 10px;
+  flex: 1;
+  margin: 15px 10px 0 10px;
   padding: 25px 0px 30px 30px;
   border-radius: 5px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -12,7 +12,7 @@
 .title {
   color: rgba(255, 255, 255, 0.5);
   font-weight: 300;
-  font-size: 22px;
+  font-size: 23px;
 }
 
 .container {
