--- a/src/pages/writings/components/articlesList.module.css
+++ b/src/pages/writings/components/articlesList.module.css
@@ -4,12 +4,12 @@
   padding: 40px;
   border-radius: 5px;
   transition: 200ms;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
 }
 
 .card:hover {
-  background-color: rgb(130, 47, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .title {
