--- a/src/pages/writings/components/articlesList.module.css
+++ b/src/pages/writings/components/articlesList.module.css
@@ -1,7 +1,7 @@
 #card {
   flex: 1;
   margin: 20px 20px 0px 20px;
-  padding: 40px;
+  padding: 20px 30px 20px 30px;
   border-radius: 5px;
   transition: 200ms;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -30,4 +30,24 @@
   opacity: 0.7;
   font-size: 16px;
   font-weight: 300;
+}
+
+.tags_wrapper {
+  text-align: left;
+  margin-top: 20px;
+  padding-bottom: 0px;
+  margin-left: -3px;
+}
+
+.tag {
+  display: inline-block;
+  padding: 2px 8px 3px 8px;
+  font-size: 12px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.9) !important;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: black;
+  border-radius: 2px;
+  margin: 3px;
+  cursor: default;
 }
