reduced the size of gifs and removed unused assets

--- a/src/pages/home/components/header.module.css
+++ b/src/pages/home/components/header.module.css
@@ -10,7 +10,7 @@
   z-index: 0;
   height: var(--header-height);
   max-width: var(--header-max-width);
-  background-image: url('../../../global/assets/images/cyberpunk_2.gif');
+  background-image: url("../../../global/assets/images/CP_home.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
@@ -25,16 +25,19 @@
   width: calc(100% - 1px);
   height: 100%;
   border-right: 1px solid white;
-  border-image:
-    linear-gradient(to bottom,
+  border-image: linear-gradient(
+      to bottom,
       rgb(255, 255, 255, 0.22),
-      rgb(255, 255, 255, 0.10)) 1 100%;
+      rgb(255, 255, 255, 0.1)
+    )
+    1 100%;
   position: relative;
-  background:
-    linear-gradient(8deg,
-      rgba(255, 255, 255, 0.0) 20%,
-      rgba(255, 255, 255, 0.05) 50%,
-      rgba(255, 255, 255, 0.18) 80%);
+  background: linear-gradient(
+    8deg,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0.05) 50%,
+    rgba(255, 255, 255, 0.18) 80%
+  );
 }
 
 .movable_box {
