--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -10,7 +10,7 @@
   z-index: 0;
   height: var(--header-height);
   max-width: var(--header-max-width);
-  background-image: url('../../../global/assets/images/cyberpunk_3.gif');
+  background-image: url("../../../global/assets/images/CP_projects.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
@@ -24,18 +24,21 @@
   justify-content: flex-end;
   border-right: 1px solid white;
   overflow-x: hidden;
-  border-image:
-    linear-gradient(to bottom,
+  border-image: linear-gradient(
+      to bottom,
       rgb(255, 255, 255, 0.02),
-      rgba(0, 0, 0, 0.9)) 1 100%;
+      rgba(0, 0, 0, 0.9)
+    )
+    1 100%;
   position: relative;
   z-index: 1;
   position: relative;
-  background:
-    linear-gradient(8deg,
-      rgba(255, 255, 255, 0.0) 20%,
-      rgba(255, 255, 255, 0.05) 50%,
-      rgba(255, 255, 255, 0.18) 80%);
+  background: linear-gradient(
+    8deg,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0.05) 50%,
+    rgba(255, 255, 255, 0.18) 80%
+  );
   width: calc(100%-1px);
   height: 100%;
 }
