--- a/src/pages/stats/components/header.module.css
+++ b/src/pages/stats/components/header.module.css
@@ -10,12 +10,12 @@
   z-index: 0;
   height: var(--header-height);
   max-width: var(--header-max-width);
-  background-image: url('../../../global/assets/images/cyberpunk_7.gif');
+  background-image: url("../../../global/assets/images/CP_stats.gif");
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
-  border-top: 1px solid rgba(255, 255, 255, 0.30);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: inset -4px 4px 12px rgb(0, 0, 0, 1);
 }
 
@@ -24,18 +24,21 @@
   justify-content: flex-end;
   border-right: 1px solid white;
   overflow-x: hidden;
-  border-image:
-    linear-gradient(to bottom,
+  border-image: linear-gradient(
+      to bottom,
       rgb(255, 255, 255, 0.15),
-      rgba(0, 0, 0, 0.9)) 1 100%;
+      rgba(0, 0, 0, 0.9)
+    )
+    1 100%;
   position: relative;
   z-index: 1;
   position: relative;
-  background:
-    linear-gradient(8deg,
-      rgba(255, 255, 255, 0.0) 20%,
-      rgba(255, 255, 255, 0.05) 50%,
-      rgba(255, 255, 255, 0.18) 80%);
+  background: linear-gradient(
+    8deg,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0.05) 50%,
+    rgba(255, 255, 255, 0.18) 80%
+  );
   width: calc(100%-1px);
   height: 100%;
 }
@@ -58,7 +61,7 @@
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.icons_wrapper>div {
+.icons_wrapper > div {
   font-size: 50px;
   width: 60px;
   text-align: center;
