--- a/src/global/components/modal/modal.module.css
+++ b/src/global/components/modal/modal.module.css
@@ -1,27 +1,25 @@
-.backdrop {
-  position: absolute;
+.modal {
+  position: fixed;
   z-index: 10;
   right: 0;
   left: 0;
   top: 0;
-  width: 100%;
-  height: auto;
+  width: 100vw;
+  height: 100%;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .card {
   position: absolute;
-  border-radius: 5px;
-  color: black;
-  margin-left: auto;
-  margin-right: auto;
   left: 0;
   right: 0;
-  top: 0;
-  z-index: 11;
-  width: 600px;
-  height: auto;
+  z-index: 12;
+  border-radius: 5px;
+  margin: 50px auto;
+  max-width: 600px;
   background-color: white;
+  color: black;
 }
 
 .card .header {
@@ -40,7 +38,7 @@
   font-size: 25px;
 }
 
-.card .header .Xmark_box {
+.card .header .close_btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,4 +52,8 @@
 .card .content {
   padding: 10px;
   margin-top: 20px;
+}
+
+.content img {
+  width: 100%;
 }
