--- a/src/global/components/modal/modal.module.css
+++ b/src/global/components/modal/modal.module.css
@@ -12,14 +12,23 @@
 
 .card {
   position: absolute;
-  left: 0;
   right: 0;
+  left: 0;
   z-index: 12;
   border-radius: 5px;
+  height: fit-content;
   margin: 50px auto;
   max-width: 600px;
   background-color: white;
   color: black;
+}
+
+.card:after {
+  position: absolute;
+  content: "";
+  bottom: -50px;
+  height: 50px;
+  width: 1px;
 }
 
 .card .header {
